# QuantumTransformers

./: .gitignore  README.md  main.py  project.toml  pyproject.toml  verify_quantum.py
dataset/: qswin.csv  qvit.csv  swin.csv  visulalization.ipynb  vit.csv
hpopt/: hpopt.py
quantum_transformers/: swintransformer.py  training.py
src/hpopt/: hpopt.py
src/quantum_transformers/: __init__.py  common_layers.py  datasets.py  quantum_layer.py  quantum_layer_pennylane.py  swintransformer.py  training.py  transformers.py
src/test/: test_quantum_circuit.py
