[project]
name = "quantumtransformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Core JAX & Optimization
    "jax[cuda12]>=0.9.0",
    "flax",
    "optax",
    "einops",
    # Data & Tokenizers
    "transformers",
    "datasets",
    "gdown",
    # Utilities & Evaluation
    "scikit-learn",
    "ray[tune]",
    "tqdm",
    # Visualization (PyTorch CPU for TensorBoard only)
    "torch",
    "torchvision",
    "matplotlib",
    "seaborn",
    "tensorboard",
    # Development & Notebooks
    "jupyterlab",
    "ipykernel",
    # Quantum
    "tensorcircuit-ng[jax]",
    # CUDA GPU is not recognized with the latest cusparse(12.5.9.5, 12.5.10.65)
    # RuntimeError: jaxlib/cuda/versions_helpers.cc:81: operation cusparseGetProperty(MAJOR_VERSION, &major) failed: The cuSPARSE library was not found.
    "nvidia-cusparse-cu12==12.5.8.93",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
tensorcircuit-ng = { git = "https://github.com/tensorcircuit/tensorcircuit-ng.git" }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
